# src/api/requests/index.ts
@@ -3,6 +3,7 @@ import {verifySchema} from "./verifyEmail";
 import {signInSchema} from "./signIn";
 import {refreshTokenSchema} from "./refreshToken";
 import {revokeTokenSchema} from "./revokeToken";
+import {forgotPasswordSchema} from './forgotPassword';
 
 export default {
   signUpSchema,
@@ -10,4 +11,5 @@ export default {
   signInSchema,
   refreshTokenSchema,
   revokeTokenSchema,
+  forgotPasswordSchema,
 }
